base/src/test/resources/failure/scope/re-prim.aya.txt
In file $FILE:3:5 ->

  1 | prim I
  2 | prim arcoe
  3 | prim arcoe
           ^---^

Error: Redefinition of primitive `arcoe`

Resolving interrupted due to:
1 error(s), 0 warning(s).
What are you doing?
